completed the project.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="input-field">
         <input
           type="text"
-          placeholder="input number for gridsize"
+          placeholder="input number"
           onchange="changeGridSize(this.value)"
         />
         <button>set size</button>
