--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap"
       rel="stylesheet"
     />
-    <script src="/app.js" defer></script>
+    <script src="app.js" defer></script>
     <title>Etch-A-Sketch</title>
   </head>
   <body>
